@@ -44,6 +44,13 @@ def cli():
         default=False,
         help="Create without saving to the file. Only print result to the console.",
     )
+    
+    omm_cli.add_argument(
+        "--no-global-schema",
+        action="store_true",
+        default=False,
+        help="Define schema in table_args, not global in Gino()",
+    )
     return omm_cli
 
 
@@ -63,6 +70,7 @@ def main():
         dump=not args.no_dump,
         dump_path=args.target,
         models_type=args.models_type,
+        schema_global=not args.no_global_schema
     )
     print(f"File with result was saved to {target_file} file")
 
