@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "omymodels"
-version = "0.5.0-alpha0"
+version = "0.5.0"
 description = "O! My Models (omymodels) is a library to generate Python Models for GinoORM & Pydantic from SQL DDL ."
 authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
 license = "MIT"
