@@ -29,7 +29,7 @@ class Users(db.Model):
 
     __tablename__ = 'users'
 
-    id = db.Column(db.Integer(), autoincrement=True, nullable=False, primary_key=True)
+    id = db.Column(db.Integer(), autoincrement=True, primary_key=True)
     name = db.Column(db.String())
     created_at = db.Column(db.TIMESTAMP())
     updated_at = db.Column(db.TIMESTAMP())
@@ -41,7 +41,7 @@ class Languages(db.Model):
 
     __tablename__ = 'languages'
 
-    id = db.Column(db.Integer(), nullable=False, primary_key=True)
+    id = db.Column(db.Integer(), primary_key=True)
     code = db.Column(db.String(2), nullable=False)
     name = db.Column(db.String(), nullable=False)
 """
@@ -53,51 +53,6 @@ class Languages(db.Model):
     with open(models, "r") as f:
         content_of_models_py = f.read()
     assert expected == content_of_models_py
-
-
-def test_ddl_with_defaults():
-    ddl = """
-    drop table if exists v2.task_requests ;
-    CREATE table v2.task_requests (
-        runid                decimal(21) not null
-    ,job_id               decimal(21) not null
-    ,object_id            varchar(100) not null default 'none'
-    ,pipeline_id          varchar(100) not null default 'none'
-    ,sequence             smallint not null
-    ,processor_id         varchar(100) not null
-    ,source_file          varchar(1000) not null default 'none'
-    ,job_args             varchar array null
-    ,request_time         timestamp not null default now()
-    ,status               varchar(25) not null
-    ,status_update_time   timestamp null default now()
-    ) ;
-    create unique index task_requests_pk on v2.task_requests (runid) ;
-
-    """
-
-    pass
-
-
-def test_drop_does_not_break_anything():
-    ddl = """
-    drop table if exists v2.task_requests ;
-    CREATE table v2.task_requests (
-        runid                decimal(21) not null
-    ,job_id               decimal(21) not null
-    ,object_id            varchar(100) not null default 'none'
-    ,pipeline_id          varchar(100) not null default 'none'
-    ,sequence             smallint not null
-    ,processor_id         varchar(100) not null
-    ,source_file          varchar(1000) not null default 'none'
-    ,job_args             varchar array null
-    ,request_time         timestamp not null default now()
-    ,status               varchar(25) not null
-    ,status_update_time   timestamp null default now()
-    ) ;
-    create unique index task_requests_pk on v2.task_requests (runid) ;
-
-    """
-    pass
 
 
 def test_correct_work_with_dash_simbols():
@@ -115,8 +70,7 @@ def test_correct_work_with_dash_simbols():
 
 """
     result = create_models(ddl)
-    expected = """
-from sqlalchemy.dialects.postgresql import ARRAY
+    expected = """from sqlalchemy.dialects.postgresql import ARRAY
 from gino import Gino
 
 db = Gino()
@@ -133,8 +87,9 @@ class Arrays2(db.Model):
     schedule = db.Column(ARRAY(db.Text()))
     pay_by_quarter = db.Column(ARRAY(db.Integer()))
     pay_by_quarter_2 = db.Column(ARRAY(db.Integer()))
-    pay_by_quarter_3 = db.Column(ARRAY(db.Integer()))   
+    pay_by_quarter_3 = db.Column(ARRAY(db.Integer()))
 """
+    assert expected == result['code']
 
 
 def test_support_uuid_and_schema_in_table_args():
@@ -154,8 +109,43 @@ class Table(db.Model):
 
     __tablename__ = 'table'
 
-    _id = db.Column(UUID, nullable=False, primary_key=True)
+    _id = db.Column(UUID, primary_key=True)
 """
     assert expected == result['code']
 
 
+def test_schema_not_global():
+    
+    ddl = """
+    CREATE TABLE "prefix--schema-name"."table" (
+    _id uuid PRIMARY KEY,
+    one_more_id int
+    );
+        create unique index table_pk on "prefix--schema-name"."table" (one_more_id) ;
+        create index table_ix2 on "prefix--schema-name"."table" (_id) ;
+    """
+    result = create_models(ddl, schema_global=False)
+    expected = """from sqlalchemy.dialects.postgresql import UUID
+from sqlalchemy.schema import UniqueConstraint
+from sqlalchemy import Index
+from gino import Gino
+
+db = Gino()
+
+
+class Table(db.Model):
+
+    __tablename__ = 'table'
+
+    _id = db.Column(UUID, primary_key=True)
+    one_more_id = db.Column(db.Integer())
+
+    __table_args__ = (
+                
+    UniqueConstraint(one_more_id, name='table_pk'),
+    Index('table_ix2', _id),
+    dict(schema="prefix--schema-name")
+            )
+
+"""
+    assert expected == result['code']
